--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2396, 338)\n",
-      "Exercise Transform Data(Tuple) Count: 2396\n"
+      "Raw Data Count(Exercises, Days): (2405, 340)\n",
+      "Exercise Transform Data(Tuple) Count: 2405\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 338\n"
+      "Exercise Days: 340\n"
      ]
     }
    ],
@@ -198,14 +198,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Arnold Press[Dumbbell]', 30)\n",
+      "('Arnold Press[Dumbbell]', 31)\n",
       "('Assisted Dips[Machine]', 60)\n",
-      "('Assisted Pull-Up[Machine]', 74)\n",
+      "('Assisted Pull-Up[Machine]', 75)\n",
       "('Back Extension', 44)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Row[Barbell]', 19)\n",
+      "('Bent Over Row[Barbell]', 20)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
       "('Biceps Curls[Barbell]', 1)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
@@ -253,9 +253,9 @@
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 114)\n",
+      "('Lat Pulldown[Machine]', 115)\n",
       "('Leg Extension[Machine]', 66)\n",
-      "('Long Pull Row[Cable]', 80)\n",
+      "('Long Pull Row[Cable]', 81)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 129)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
@@ -274,15 +274,15 @@
       "('Push-Up', 11)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 34)\n",
-      "('Running', 55)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 35)\n",
+      "('Running', 56)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 92)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 83)\n",
-      "('Shoulder Press[Machine]', 88)\n",
-      "('Side Lateral Raise[Dumbbell]', 81)\n",
+      "('Shoulder Press[Machine]', 89)\n",
+      "('Side Lateral Raise[Dumbbell]', 82)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -337,116 +337,116 @@
      "output_type": "stream",
      "text": [
       "('Lying Leg Curls[Machine]', 129)\n",
-      "('Lat Pulldown[Machine]', 114)\n",
+      "('Lat Pulldown[Machine]', 115)\n",
       "('Plank', 104)\n",
       "('Deadlift[Barbell]', 103)\n",
       "('Hip Abduction[Machine]', 92)\n",
       "('Seated Chest Press[Machine]', 92)\n",
-      "('Shoulder Press[Machine]', 88)\n",
+      "('Shoulder Press[Machine]', 89)\n",
       "('Seated Row[Machine]', 83)\n",
+      "('Side Lateral Raise[Dumbbell]', 82)\n",
       "('Hip Adduction[Machine]', 82)\n",
-      "('Side Lateral Raise[Dumbbell]', 81)\n",
-      "('Long Pull Row[Cable]', 80)\n",
-      "('Assisted Pull-Up[Machine]', 74)\n",
+      "('Long Pull Row[Cable]', 81)\n",
+      "('Assisted Pull-Up[Machine]', 75)\n",
       "('Flat Bench Press[Barbell]', 72)\n",
       "('Power Leg Press[Machine]', 68)\n",
       "('Leg Extension[Machine]', 66)\n",
       "('Assisted Dips[Machine]', 60)\n",
-      "('Chest Fly[Pec Deck Machine]', 58)\n",
       "('Straight Arm Pulldown[Cable]', 58)\n",
-      "('Running', 55)\n",
+      "('Chest Fly[Pec Deck Machine]', 58)\n",
+      "('Running', 56)\n",
       "('Back Extension', 44)\n",
       "('Incline Bench Press[Machine]', 42)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 34)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
+      "('Arnold Press[Dumbbell]', 31)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Arnold Press[Dumbbell]', 30)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
-      "('Military Press[Smith Machine]', 22)\n",
       "('Wrist Roller', 22)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "('Military Press[Smith Machine]', 22)\n",
+      "('Bent Over Row[Barbell]', 20)\n",
       "('Dips', 20)\n",
-      "('Bent Over Row[Barbell]', 19)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Split Squat[Smith Machine]', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Split Squat[Smith Machine]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Pull-Up', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Pull-Up', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Push-Up', 11)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Hip Thrust', 5)\n",
       "('Body-Weight Squat', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Hanging Leg Raise', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Full Squat[Barbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Power Press[Machine]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Trx Row', 2)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Power Press[Machine]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Walking', 2)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Split Squat', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Hip External Rotation', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
       "('Squat[Kettlebell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Trx Lunge', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
       "('Biceps Curls[EZ Curl Bar]', 1)\n",
       "('Vipr Lateral Shuffle', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Cross Lunges', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
       "('Hip Abduction', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n"
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n"
      ]
     }
    ],
