--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2410, 341)\n",
-      "Exercise Transform Data(Tuple) Count: 2410\n"
+      "Raw Data Count(Exercises, Days): (2419, 343)\n",
+      "Exercise Transform Data(Tuple) Count: 2419\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 341\n"
+      "Exercise Days: 343\n"
      ]
     }
    ],
@@ -199,7 +199,7 @@
      "output_type": "stream",
      "text": [
       "('Arnold Press[Dumbbell]', 31)\n",
-      "('Assisted Dips[Machine]', 60)\n",
+      "('Assisted Dips[Machine]', 61)\n",
       "('Assisted Pull-Up[Machine]', 75)\n",
       "('Back Extension', 44)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
@@ -215,10 +215,10 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 58)\n",
+      "('Chest Fly[Pec Deck Machine]', 59)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 104)\n",
+      "('Deadlift[Barbell]', 105)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
@@ -240,14 +240,14 @@
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
       "('Hip Abduction[Machine]', 93)\n",
-      "('Hip Adduction[Machine]', 83)\n",
+      "('Hip Adduction[Machine]', 84)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 42)\n",
+      "('Incline Bench Press[Machine]', 43)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
@@ -257,7 +257,7 @@
       "('Leg Extension[Machine]', 67)\n",
       "('Long Pull Row[Cable]', 81)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 130)\n",
+      "('Lying Leg Curls[Machine]', 131)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Military Press[Smith Machine]', 22)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
@@ -271,13 +271,13 @@
       "('Power Leg Press[Machine]', 68)\n",
       "('Power Press[Machine]', 2)\n",
       "('Pull-Up', 12)\n",
-      "('Push-Up', 11)\n",
+      "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 35)\n",
-      "('Running', 56)\n",
+      "('Running', 57)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Seated Chest Press[Machine]', 92)\n",
+      "('Seated Chest Press[Machine]', 93)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 83)\n",
@@ -336,14 +336,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 130)\n",
+      "('Lying Leg Curls[Machine]', 131)\n",
       "('Lat Pulldown[Machine]', 115)\n",
+      "('Deadlift[Barbell]', 105)\n",
       "('Plank', 104)\n",
-      "('Deadlift[Barbell]', 104)\n",
       "('Hip Abduction[Machine]', 93)\n",
-      "('Seated Chest Press[Machine]', 92)\n",
+      "('Seated Chest Press[Machine]', 93)\n",
       "('Shoulder Press[Machine]', 89)\n",
-      "('Hip Adduction[Machine]', 83)\n",
+      "('Hip Adduction[Machine]', 84)\n",
       "('Seated Row[Machine]', 83)\n",
       "('Side Lateral Raise[Dumbbell]', 82)\n",
       "('Long Pull Row[Cable]', 81)\n",
@@ -351,15 +351,15 @@
       "('Flat Bench Press[Barbell]', 72)\n",
       "('Power Leg Press[Machine]', 68)\n",
       "('Leg Extension[Machine]', 67)\n",
-      "('Assisted Dips[Machine]', 60)\n",
+      "('Assisted Dips[Machine]', 61)\n",
+      "('Chest Fly[Pec Deck Machine]', 59)\n",
       "('Straight Arm Pulldown[Cable]', 58)\n",
-      "('Chest Fly[Pec Deck Machine]', 58)\n",
-      "('Running', 56)\n",
+      "('Running', 57)\n",
       "('Back Extension', 44)\n",
-      "('Incline Bench Press[Machine]', 42)\n",
+      "('Incline Bench Press[Machine]', 43)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Arnold Press[Dumbbell]', 31)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
@@ -367,13 +367,13 @@
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Military Press[Smith Machine]', 22)\n",
       "('Wrist Roller', 22)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Dips', 20)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Bent Over Row[Barbell]', 20)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Split Squat[Smith Machine]', 18)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
@@ -381,72 +381,72 @@
       "('Biceps Curls[Machine]', 13)\n",
       "('Pull-Up', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
+      "('Push-Up', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Push-Up', 11)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
+      "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Hip Thrust', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Body-Weight Squat', 5)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('Body-Weight Squat', 5)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Reverse Crunch', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Trx Row', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Full Squat[Barbell]', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Walking', 2)\n",
-      "('Power Press[Machine]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Power Press[Machine]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Vipr Lateral Shuffle', 1)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Split Squat', 1)\n",
       "('One Arm Low Row[Machine]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Cross Lunges', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n"
+      "('Trx Suspended Lunge', 1)\n"
      ]
     }
    ],
