--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2423, 344)\n",
-      "Exercise Transform Data(Tuple) Count: 2423\n"
+      "Raw Data Count(Exercises, Days): (2439, 348)\n",
+      "Exercise Transform Data(Tuple) Count: 2439\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 344\n"
+      "Exercise Days: 348\n"
      ]
     }
    ],
@@ -198,9 +198,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Arnold Press[Dumbbell]', 31)\n",
-      "('Assisted Dips[Machine]', 61)\n",
-      "('Assisted Pull-Up[Machine]', 75)\n",
+      "('Arnold Press[Dumbbell]', 32)\n",
+      "('Assisted Dips[Machine]', 62)\n",
+      "('Assisted Pull-Up[Machine]', 76)\n",
       "('Back Extension', 44)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -215,16 +215,16 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 59)\n",
+      "('Chest Fly[Pec Deck Machine]', 60)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 105)\n",
+      "('Deadlift[Barbell]', 106)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Dips', 20)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 73)\n",
+      "('Flat Bench Press[Barbell]', 74)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
@@ -240,24 +240,24 @@
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
       "('Hip Abduction[Machine]', 94)\n",
-      "('Hip Adduction[Machine]', 84)\n",
+      "('Hip Adduction[Machine]', 85)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 44)\n",
+      "('Incline Bench Press[Machine]', 45)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 115)\n",
-      "('Leg Extension[Machine]', 68)\n",
-      "('Long Pull Row[Cable]', 81)\n",
+      "('Lat Pulldown[Machine]', 116)\n",
+      "('Leg Extension[Machine]', 69)\n",
+      "('Long Pull Row[Cable]', 82)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 131)\n",
+      "('Lying Leg Curls[Machine]', 132)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Military Press[Smith Machine]', 22)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
@@ -274,15 +274,15 @@
       "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 35)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 36)\n",
       "('Running', 57)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 93)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 83)\n",
-      "('Shoulder Press[Machine]', 89)\n",
-      "('Side Lateral Raise[Dumbbell]', 82)\n",
+      "('Seated Row[Machine]', 84)\n",
+      "('Shoulder Press[Machine]', 90)\n",
+      "('Side Lateral Raise[Dumbbell]', 83)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -336,53 +336,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 131)\n",
-      "('Lat Pulldown[Machine]', 115)\n",
-      "('Deadlift[Barbell]', 105)\n",
+      "('Lying Leg Curls[Machine]', 132)\n",
+      "('Lat Pulldown[Machine]', 116)\n",
+      "('Deadlift[Barbell]', 106)\n",
       "('Plank', 104)\n",
       "('Hip Abduction[Machine]', 94)\n",
       "('Seated Chest Press[Machine]', 93)\n",
-      "('Shoulder Press[Machine]', 89)\n",
-      "('Hip Adduction[Machine]', 84)\n",
-      "('Seated Row[Machine]', 83)\n",
-      "('Side Lateral Raise[Dumbbell]', 82)\n",
-      "('Long Pull Row[Cable]', 81)\n",
-      "('Assisted Pull-Up[Machine]', 75)\n",
-      "('Flat Bench Press[Barbell]', 73)\n",
+      "('Shoulder Press[Machine]', 90)\n",
+      "('Hip Adduction[Machine]', 85)\n",
+      "('Seated Row[Machine]', 84)\n",
+      "('Side Lateral Raise[Dumbbell]', 83)\n",
+      "('Long Pull Row[Cable]', 82)\n",
+      "('Assisted Pull-Up[Machine]', 76)\n",
+      "('Flat Bench Press[Barbell]', 74)\n",
+      "('Leg Extension[Machine]', 69)\n",
       "('Power Leg Press[Machine]', 68)\n",
-      "('Leg Extension[Machine]', 68)\n",
-      "('Assisted Dips[Machine]', 61)\n",
-      "('Chest Fly[Pec Deck Machine]', 59)\n",
+      "('Assisted Dips[Machine]', 62)\n",
+      "('Chest Fly[Pec Deck Machine]', 60)\n",
       "('Straight Arm Pulldown[Cable]', 58)\n",
       "('Running', 57)\n",
-      "('Incline Bench Press[Machine]', 44)\n",
+      "('Incline Bench Press[Machine]', 45)\n",
       "('Back Extension', 44)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 36)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 35)\n",
+      "('Arnold Press[Dumbbell]', 32)\n",
       "('Side-Lying Hip Abduction', 32)\n",
-      "('Arnold Press[Dumbbell]', 31)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
-      "('Military Press[Smith Machine]', 22)\n",
       "('Wrist Roller', 22)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "('Military Press[Smith Machine]', 22)\n",
       "('Dips', 20)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Bent Over Row[Barbell]', 20)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Split Squat[Smith Machine]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Push-Up', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
+      "('Push-Up', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
@@ -392,61 +392,61 @@
       "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
-      "('Hack Squat[Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
-      "('Hip Thrust', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Hack Squat[Machine]', 6)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
       "('Squat[Dumbbell]', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Body-Weight Squat', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('Reverse Crunch', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Reverse Crunch', 4)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Hanging Leg Raise', 3)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Power Press[Machine]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Dead Bug', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
       "('Walking', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
+      "('Power Press[Machine]', 2)\n",
       "('Trx Row', 2)\n",
-      "('Hip Abduction', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
       "('One Arm Low Row[Machine]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n"
+      "('Trx Suspended Lunge', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Squat[Kettlebell]', 1)\n"
      ]
     }
    ],
