--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -85,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2791, 416)\n",
-      "Exercise Transform Data(Tuple) Count: 2791\n"
+      "Raw Data Count(Exercises, Days): (2822, 421)\n",
+      "Exercise Transform Data(Tuple) Count: 2822\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 416\n"
+      "Exercise Days: 421\n"
      ]
     }
    ],
@@ -183,11 +183,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Ab Rollout[Ab Wheel]', 24)\n",
+      "('Ab Rollout[Ab Wheel]', 29)\n",
       "('Anold Press[Dumbbell]', 5)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
       "('Assisted Dips[Machine]', 70)\n",
-      "('Assisted Pull-Up[Machine]', 95)\n",
+      "('Assisted Pull-Up[Machine]', 96)\n",
       "('Back Extension', 45)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -202,14 +202,14 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 77)\n",
+      "('Chest Fly[Pec Deck Machine]', 78)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 117)\n",
+      "('Deadlift[Barbell]', 119)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
-      "('Dips', 32)\n",
+      "('Dips', 33)\n",
       "('Face Pulls[Cable]', 1)\n",
       "('Flat Bench Press[Barbell]', 77)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
@@ -220,33 +220,33 @@
       "('Full Squat[Smith Machine]', 2)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Hack Squat[Machine]', 19)\n",
+      "('Hack Squat[Machine]', 21)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Hanging Leg Raise', 3)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
       "('Hip Abduction[Machine]', 104)\n",
-      "('Hip Adduction[Machine]', 93)\n",
+      "('Hip Adduction[Machine]', 95)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 64)\n",
+      "('Incline Bench Press[Machine]', 65)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 135)\n",
-      "('Leg Extension[Machine]', 81)\n",
-      "('Long Pull Row[Cable]', 100)\n",
+      "('Lat Pulldown[Machine]', 136)\n",
+      "('Leg Extension[Machine]', 82)\n",
+      "('Long Pull Row[Cable]', 101)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 144)\n",
+      "('Lying Leg Curls[Machine]', 146)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Dumbbell]', 4)\n",
+      "('Military Press[Dumbbell]', 5)\n",
       "('Military Press[Smith Machine]', 25)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Low Row[Machine]', 1)\n",
@@ -254,15 +254,15 @@
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Kettlebell]', 44)\n",
+      "('One Leg Deadlift[Kettlebell]', 47)\n",
       "('Plank', 104)\n",
       "('Power Leg Press[Machine]', 75)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 53)\n",
-      "('Running', 91)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 54)\n",
+      "('Running', 96)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 98)\n",
       "('Seated Leg Press[Machine]', 14)\n",
@@ -270,7 +270,7 @@
       "('Seated Row[Machine]', 92)\n",
       "('Shoulder Press[Machine]', 104)\n",
       "('Side Lateral Raise[Dumbbell]', 97)\n",
-      "('Side Lateral Raise[Machine]', 17)\n",
+      "('Side Lateral Raise[Machine]', 18)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
@@ -320,119 +320,119 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 144)\n",
-      "('Lat Pulldown[Machine]', 135)\n",
-      "('Deadlift[Barbell]', 117)\n",
-      "('Shoulder Press[Machine]', 104)\n",
+      "('Lying Leg Curls[Machine]', 146)\n",
+      "('Lat Pulldown[Machine]', 136)\n",
+      "('Deadlift[Barbell]', 119)\n",
       "('Hip Abduction[Machine]', 104)\n",
       "('Plank', 104)\n",
-      "('Long Pull Row[Cable]', 100)\n",
+      "('Shoulder Press[Machine]', 104)\n",
+      "('Long Pull Row[Cable]', 101)\n",
       "('Seated Chest Press[Machine]', 98)\n",
       "('Side Lateral Raise[Dumbbell]', 97)\n",
-      "('Assisted Pull-Up[Machine]', 95)\n",
-      "('Hip Adduction[Machine]', 93)\n",
+      "('Running', 96)\n",
+      "('Assisted Pull-Up[Machine]', 96)\n",
+      "('Hip Adduction[Machine]', 95)\n",
       "('Seated Row[Machine]', 92)\n",
-      "('Running', 91)\n",
-      "('Leg Extension[Machine]', 81)\n",
+      "('Leg Extension[Machine]', 82)\n",
+      "('Chest Fly[Pec Deck Machine]', 78)\n",
       "('Flat Bench Press[Barbell]', 77)\n",
-      "('Chest Fly[Pec Deck Machine]', 77)\n",
       "('Power Leg Press[Machine]', 75)\n",
       "('Assisted Dips[Machine]', 70)\n",
-      "('Incline Bench Press[Machine]', 64)\n",
+      "('Incline Bench Press[Machine]', 65)\n",
       "('Straight Arm Pulldown[Cable]', 60)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 53)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 54)\n",
+      "('One Leg Deadlift[Kettlebell]', 47)\n",
       "('Back Extension', 45)\n",
-      "('One Leg Deadlift[Kettlebell]', 44)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 38)\n",
       "('Wide Pulldown Rear[Machine]', 36)\n",
       "('Arnold Press[Dumbbell]', 35)\n",
-      "('Dips', 32)\n",
+      "('Dips', 33)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
+      "('Ab Rollout[Ab Wheel]', 29)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Military Press[Smith Machine]', 25)\n",
-      "('Ab Rollout[Ab Wheel]', 24)\n",
       "('Wrist Roller', 22)\n",
+      "('Hack Squat[Machine]', 21)\n",
       "('Bent Over Row[Barbell]', 20)\n",
       "('Split Squat[Smith Machine]', 19)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
-      "('Hack Squat[Machine]', 19)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Side Lateral Raise[Machine]', 18)\n",
+      "('Goblet Squat[Kettlebell]', 18)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
-      "('Side Lateral Raise[Machine]', 17)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Push-Up', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Body-Weight Squat', 5)\n",
+      "('Military Press[Dumbbell]', 5)\n",
       "('Anold Press[Dumbbell]', 5)\n",
       "('Hip Thrust', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Military Press[Dumbbell]', 4)\n",
+      "('Goblet Squat[Dumbbell]', 4)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Walking', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Dead Bug', 2)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Dead Bug', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Trx Row', 2)\n",
-      "('Hip Abduction', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Walking', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Cross Lunges', 1)\n",
+      "('Split Squat', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Hip External Rotation', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n"
+      "('Hip Abduction', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n"
      ]
     }
    ],
